<resources>
    <string name="app_name">Locating_blood_centre</string>
    <string name="log_in">LOG IN</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email</string>
    <string name="phone_no">Phone</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered_log_in_here">Already registered? Log-in here</string>
    <string name="blood_group">Blood group</string>
    <string name="choose_type_of_account">CHOOSE TYPE OF ACCOUNT</string>
    <string name="hospital">Hospital</string>
    <string name="personal_account">Personal Account</string>
    <string name="blood_bank">Blood bank</string>
    <string name="button">Button</string>
    <string name="apply">APPLY</string>
    <string name="sign_in">SIGN IN</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phonebb">Phone</string>
    <string name="blood_bank_name">Blood Bank name</string>
    <string name="pincodebb">Pincode</string>
    <string name="telephonebb">Telephone</string>
    <string name="addressbb">Address</string>
    <string name="proofbb">Proof</string>
    <string name="passwordbb">Password</string>
    <string name="emailbb">Email</string>
    <string name="confirm_passwordbb">Confirm Password</string>
    <string name="sign_inbb">SIGN IN</string>
    <string name="sign_upbb">SIGN UP</string>
    <string name="addresshos">Address</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="telephonehos">Telephone No.</string>
    <string name="pincodehos">Pincode</string>
    <string name="phone_nohos">Phone No.</string>
    <string name="proofhos">Proof</string>
    <string name="sign_inhos">SIGN IN</string>
    <string name="sign_uphos">SIGN UP</string>
    <string name="comfirm_passwordhos">Comfirm Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="back">BACK</string>
    <string name="backrec">BACK</string>
    <string name="log_out">LOG OUT</string>
    <string name="welcome">WELCOME</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_passwordhos">Confirm password</string>
</resources>